--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,7 @@ kernels/selective_scan/test_selective_scan_speed.py
 kernels/selective_scan/test_selective_scan_easy.py
 kernels/selective_scan/ssmtriton.py
 test.sh
+
+
+# ignore saved / pretrained models
+**/*.pth
